@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -27,7 +27,15 @@ package co.elastic.apm.agent.metrics.builtin;
 import co.elastic.apm.agent.metrics.Labels;
 import co.elastic.apm.agent.metrics.MetricRegistry;
 import co.elastic.apm.agent.report.ReporterConfiguration;
+import org.assertj.core.api.AbstractDoubleAssert;
 import org.junit.jupiter.api.Test;
+
+import java.lang.management.ManagementFactory;
+import java.lang.management.MemoryPoolMXBean;
+import java.lang.management.MemoryType;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
@@ -40,14 +48,42 @@ class JvmMemoryMetricsTest {
     void testMetrics() {
         final MetricRegistry registry = new MetricRegistry(mock(ReporterConfiguration.class));
         jvmMemoryMetrics.bindTo(registry);
-        System.out.println(registry.toString());
-        assertThat(registry.getGaugeValue("jvm.memory.heap.used", Labels.EMPTY)).isNotZero();
-        assertThat(registry.getGaugeValue("jvm.memory.heap.committed", Labels.EMPTY)).isNotZero();
-        assertThat(registry.getGaugeValue("jvm.memory.heap.max", Labels.EMPTY)).isNotZero();
-        assertThat(registry.getGaugeValue("jvm.memory.non_heap.used", Labels.EMPTY)).isNotZero();
-        assertThat(registry.getGaugeValue("jvm.memory.non_heap.committed", Labels.EMPTY)).isNotZero();
-        assertThat(registry.getGaugeValue("jvm.memory.non_heap.max", Labels.EMPTY)).isNotZero();
-        final long[] longs = new long[1000000];
-        System.out.println(registry.toString());
+
+        Stream.of(
+            "heap.used",
+            "heap.committed",
+            "heap.max",
+            "non_heap.used",
+            "non_heap.committed",
+            "non_heap.max")
+            .forEach(s ->
+                assertMetric(registry, "jvm.memory." + s, Labels.EMPTY)
+                    .isNotZero());
+
+        List<String> memoryPoolNames = getMemoryPoolNames();
+        for (String memoryPoolName : memoryPoolNames) {
+            final Labels spaceLabel = Labels.Mutable.of("name", memoryPoolName);
+
+            Stream.of(
+                "used",
+                "committed",
+                "max")
+                .forEach(s -> assertMetric(registry, "jvm.memory.heap.pool." + s, spaceLabel)
+                    .isNotNaN()
+                    .isGreaterThanOrEqualTo(s.equals("max") ? -1D : 0D)); // max is often not set with a short-lived JVM
+        }
+    }
+
+    private AbstractDoubleAssert<?> assertMetric(MetricRegistry registry, String name, Labels labels) {
+        return assertThat(registry.getGaugeValue(name, labels))
+            .describedAs("metric = '%s', labels = [%s]", name, labels);
+    }
+
+    private List<String> getMemoryPoolNames() {
+        return ManagementFactory.getMemoryPoolMXBeans()
+            .stream()
+            .filter(k -> k.getType().equals(MemoryType.HEAP))
+            .map(MemoryPoolMXBean::getName)
+            .collect(Collectors.toList());
     }
 }
